<resources>
    <string name="app_name">Unicar</string>
    <string name="title_home">Caronas</string>
    <string name="title_finder">Procurar</string>
    <string name="title_add">Oferecer</string>
    <string name="title_msg">Mensagens</string>
    <string name="title_perfil">Perfil</string>
    <string name="btn_hist">Caronas anteriores</string>
    <string name="title_start">Qual o próximo destino?</string>
    <string name="btn_save_cad">Cadastrar</string>
    <string name="title_codAlun">Código de Aluno (UNIVALI):</string>
    <string name="title_NomeAlu">Nome:</string>
    <string name="title_EmailAlu">E-mail:</string>
    <string name="title_NumAlu">Número:</string>
    <string name="title_ConfirmPAss">Pra ter certeza:</string>
    <string name="title_Pass">Senha:</string>
    <string name="btn_login">Login</string>
    <string name="btn_cadastrar">Cadastro</string>
    <string name="title_btn_default_date">Hoje, 8:00</string>
    <string name="title_btn_default_passageiros">2 passageiros</string>
    <string name="hint_finder_de">De Univali BC</string>
    <string name="hint_finder_para">Para Rua 2020, Centro</string>
    <string name="title_btn_finder">Procurar</string>
    <string name="title_finder_welcome">Para onde vamos?</string>
    <string name="title_add_welcome">De onde você vai sair?</string>
    <string name="btn_localiza">Usar localização atual</string>
    <string name="hint_add_localiz">Ex.: Itajaí Shopping</string>
    <string name="tabitem1">Chats</string>
    <string name="tabitem2">Notificações</string>
    <string name="tabitem3">Sobre</string>
    <string name="tabitem4">Dados</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="editar_config">Editar Configurações</string>
    <string name="nome_user">Jeremias</string>
    <string name="activity_auxiliar">Activity Auxiliar</string>
    <string name="hint_login_user">Código de aluno ou e-mail</string>
    <string name="hint_login_senha">Senha</string>
    <string name="hint_cad_cod">Código de aluno</string>
    <string name="hint_cad_nome">Nome</string>
    <string name="hint_cad_email">E-mail</string>
    <string name="hint_cad_numero">Número</string>
    <string name="hint_cad_senha">Senha</string>
    <string name="hint_cad_confirm">Confirmar senha</string>

</resources>
