<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.unicarejfw.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_finder"
        android:name="com.example.unicarejfw.ui.finder.FinderFragment"
        android:label="@string/title_finder"
        tools:layout="@layout/fragment_finder" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.unicarejfw.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_msg"
        android:name="com.example.unicarejfw.ui.msg.MsgFragment"
        android:label="@string/title_msg"
        tools:layout="@layout/fragment_msg" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.unicarejfw.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>
