<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment"
    android:paddingBottom="60dp">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="674dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="223dp"
            app:menu="@menu/perfil_menu">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="73dp"
                android:layout_height="22dp"
                android:layout_marginStart="170dp"
                android:layout_marginTop="188dp"
                android:layout_marginEnd="170dp"
                android:layout_marginBottom="44dp"
                android:text="@string/nome_user"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="91dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="155dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="56dp"
                android:src="@drawable/icons8_conta_de_teste_100" />

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLay"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabitem3" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabitem4" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpager"
            android:layout_width="match_parent"
            android:layout_height="401dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLay">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>